--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,4 +6,6 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - run: git clone https://github.com/xlab-uiuc/openctest.git
+      - run: cd openctest/data
+      - run: cat README.md
       - run: pwd
