--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,4 +8,4 @@ jobs:
       - run: git clone https://github.com/xlab-uiuc/openctest.git
       - run: ls
       - run: cd openctest/data
-      - run: pwd
+      - run: ls
