--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,7 +5,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - run: |
+      - name: Check
+        run: |
         git clone https://github.com/xlab-uiuc/openctest.git
         pwd
         cd opentest
