--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,15 +1,18 @@
 
 name: check
-on: [push]
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - name: Check
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v29.0.1
+      - name: List all changed files
         run: |
-          git clone https://github.com/xlab-uiuc/openctest.git
-          git clone https://github.com/apache/hadoop.git
-          cd hadoop
-          mvn clean install -DskipTests -pl hadoop-common-project/hadoop-common -am
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
+
 
 
