--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,8 +16,8 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             git diff $file
           done
-          echo  ${{ github.event.pull_request.head.sha }}
-          echo  ${{ github.event.pull_request.base.sha }}
+          echo "${{ github.event.pull_request.head.sha }}"
+          echo "${{ github.event.pull_request.base.sha }}"
 
 
 
