--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,6 @@ jobs:
           done
           echo "${{ github.event.pull_request.head.sha }}"
           echo "${{ github.event.pull_request.base.sha }}"
-          echo "${{ github.sha }}"
+          git diff ${{ github.event.pull_request.head.sha }} ${{ github.event.pull_request.base.sha }}
 
 
