--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,7 @@ jobs:
           done
           echo "${{ github.event.pull_request.head.sha }}"
           echo "${{ github.event.pull_request.base.sha }}"
-          git diff ${{ github.event.pull_request.head.sha }} ${{ github.event.pull_request.base.sha }}
+          git diff ${{ github.event.pull_request.head.sha }} ${{ github.event.pull_request.base.sha }} --color=always|perl -wlne 'print $1 if /^\e\[32m\+\e\[m\e\[32m(.*)\e\[m$/'
+          echo "Hello World"
 
 
