--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,17 +7,40 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2  # OR "2" -> To retrieve the preceding commit.
+          fetch-depth: 2
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v29.0.1
-      - name: Run step when a file changes
-        run: |
-          for file in ${{ steps.changed-files.outputs.modified_files }}; do
-            echo "$file was added"
-          done
+      - name: Run checker when ctest_metadata.csv is changed
         if: contains(steps.changed-files.outputs.modified_files, 'ctest_metadata.csv')
         run: |
-          git diff ${{ github.event.pull_request.head.sha }} ${{ github.event.pull_request.base.sha }} --color=always|perl -wlne 'print $1 if /^\e\[32m\+\e\[m\e\[32m(.*)\e\[m$/'
-
-
+          rm -r *
+          root_dir=$PWD
+          git checkout ${{ github.event.pull_request.base.sha }}
+          ls -a
+          begin_line=$(wc -l ctest_metadata.csv)+1
+          git checkout ${{ github.event.pull_request.head.sha }}
+          end_line=$(wc -l ctest_metadata.csv)
+          echo $begin_line
+          echo $end_line
+          
+          # git clone https://github.com/xlab-uiuc/IDoCT.git
+          # idoct_dir=$PWD/IDoCT
+          # git clone https://github.com/apache/hadoop.git
+          # hadoop_dir=$PWD/hadoop
+          # cd $hadoop_dir
+          # git apply $idoct_dir/hadoop/interception.patch
+          # mvn -pl hadoop-common-project/hadoop-common -am clean install -DskipTests
+          
+          #     python3 run_single_ctest.py "$TEST_NAME" "$CONFIG_PARAMETER=$VALUE" > out.txt
+          #     cat out.txt
+          #     if grep -q "$EXPECTATION" out.txt
+          #     then
+          #       echo "PASS this test"
+          #     else
+          #       echo "The result of Test:$TEST_NAME with Value:$VALUE may not correct"
+          #       exit 1
+          #     fi
+          # done < $INPUT
+          # IFS=$OLDIFS
+          
