--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,7 +20,7 @@ jobs:
           begin_line=$(($(wc -l < ctest_metadata.csv)+1))
           git checkout ${{ github.event.pull_request.head.sha }}
           end_line=$(wc -l < ctest_metadata.csv)
-          git clone git@github.com:xlab-uiuc/IDoCT.git
+          git clone https://github.com/xlab-uiuc/IDoCT.git
           idoct_dir=$root_dir/IDoCT
           git clone https://github.com/apache/hadoop.git
           hadoop_dir=$root_dir/hadoop
